# sdkman-mcp-server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: chloe-comment-poll.yml  chloe-triage.yml
prompts/: 00-mcp-server_template.md  00-todo-template.md  01-skeleton-steel-thread.md  02-f0-sdkman-installation.md  02-f0-sdkman-installation_drive.md  03-f0-sdkman-installation_todo.md
rules/: mcp-best-practices.md  rust.md
specs/: PRD.md
src/: error.rs  fs_helpers.rs  installation.rs  lib.rs  main.rs  platform.rs  sdkman_version.rs  shell.rs  versions.rs
src/utils/: error.rs  mod.rs  platform.rs  shell.rs
tests/: get_sdkman_version_integration_tests.rs  install_sdkman_integration_tests.rs
