[package]
name = "sdkman-mcp-server"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rmcp = { version = "0.11", features = ["transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
